# lawson-criterion-paper

./: .gitignore  .jupytext.toml  README.md  lawson-criterion-paper.py  pyproject.toml  requirements.txt
data/: experimental_results.pkl
lib/: annotationlib.py  experiment.py  fusionlib.py  latexutils.py
