[project]
name = "lawson-criterion-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.60.0",
    "pillow>=10.0.0",
    "jupytext>=1.16.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter",
    "jupyterlab",
    "ipykernel",
    "notebook",
]
